fixed button alignment

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ label{
 }
 
 .button{
+    margin-left: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
